--- a/CatchMe/Storyboard.storyboard
+++ b/CatchMe/Storyboard.storyboard
@@ -196,7 +196,7 @@
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                         <connections>
-                                            <segue destination="XfC-DD-I7W" kind="modal" id="PSs-H8-DAF"/>
+                                            <segue destination="XfC-DD-I7W" kind="modal" modalTransitionStyle="flipHorizontal" id="PSs-H8-DAF"/>
                                         </connections>
                                     </tableViewCell>
                                 </cells>
@@ -342,11 +342,11 @@
             </objects>
             <point key="canvasLocation" x="1362" y="232"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Contacts List View Controller-->
         <scene sceneID="KVI-al-raR">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3ZG-r3-A2R" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tableViewController id="XfC-DD-I7W" sceneMemberID="viewController">
+                <tableViewController id="XfC-DD-I7W" customClass="ContactsListViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="LYs-3f-2rc">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -356,18 +356,42 @@
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <items>
                                 <navigationItem title="Contacts List" id="uOP-rF-TaY">
-                                    <barButtonItem key="leftBarButtonItem" title="Back" id="cXA-3a-4bW"/>
-                                    <barButtonItem key="rightBarButtonItem" title="Add" id="BQd-lG-xME"/>
+                                    <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="cXA-3a-4bW">
+                                        <connections>
+                                            <action selector="cancelChanges" destination="XfC-DD-I7W" id="b5V-N5-0LX"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem key="rightBarButtonItem" systemItem="add" id="z8O-0f-GBw">
+                                        <connections>
+                                            <segue destination="pEu-Do-eZW" kind="modal" id="gBi-oD-IIt"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </navigationItem>
                             </items>
                         </navigationBar>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="p6I-1f-XFj">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ContactCell" textLabel="ggd-J6-HDm" detailTextLabel="Zqa-cx-xqH" style="IBUITableViewCellStyleSubtitle" id="p6I-1f-XFj">
                                 <rect key="frame" x="0.0" y="66" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ggd-J6-HDm">
+                                            <rect key="frame" x="10" y="2" width="38" height="22"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </label>
+                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Zqa-cx-xqH">
+                                            <rect key="frame" x="10" y="24" width="47" height="18"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" red="0.50196078431372548" green="0.50196078431372548" blue="0.50196078431372548" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </label>
+                                    </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
                             </tableViewCell>
@@ -394,7 +418,7 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem title="Contact Info" id="Ajv-Wf-1gp">
-                                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="pFz-tI-jLj"/>
+                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="pFz-tI-jLj"/>
                                         <barButtonItem key="rightBarButtonItem" systemItem="done" id="9J7-Mu-1BF">
                                             <connections>
                                                 <action selector="goMainMenu" destination="jhO-ni-0Sf" id="JUe-1i-s9x"/>
@@ -448,12 +472,14 @@
                     <nil key="simulatedTopBarMetrics"/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="email" destination="hiR-Mt-edT" id="Zt1-gi-y0t"/>
+                        <outlet property="name" destination="brT-fF-V1n" id="rcs-7T-ZoG"/>
                         <outlet property="txtNumber" destination="STi-PI-C6G" id="1jk-a2-LGJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jhO-ni-0Sf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="635" y="1005"/>
+            <point key="canvasLocation" x="675" y="1005"/>
         </scene>
         <!--Personal Info View Controller-->
         <scene sceneID="P8h-pr-WAg">
@@ -979,10 +1005,19 @@
                 <relationship kind="outlet" name="volumeSlider" candidateClass="UISlider"/>
             </relationships>
         </class>
-        <class className="ContactsViewController" superclassName="UIViewController">
+        <class className="ContactsListViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ContactsListViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="add:" candidateClass="UIStoryboardSegue"/>
+                <relationship kind="action" name="cancel:" candidateClass="UIStoryboardSegue"/>
+            </relationships>
+        </class>
+        <class className="ContactsViewController" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ContactsViewController.h"/>
             <relationships>
                 <relationship kind="action" name="goMainMenu"/>
+                <relationship kind="outlet" name="email" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="name" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="txtNumber" candidateClass="UITextField"/>
             </relationships>
         </class>
@@ -1040,6 +1075,9 @@
         </class>
         <class className="TPKeyboardAvoidingScrollView" superclassName="UIScrollView">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/TPKeyboardAvoidingScrollView.h"/>
+        </class>
+        <class className="UIStoryboardSegue" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UIStoryboardSegue.h"/>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
